fix(global.scss): overflow-x on html and not body

--- a/client/assets/style/global.scss
+++ b/client/assets/style/global.scss
@@ -1,10 +1,10 @@
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
     margin: 0;
-    overflow-x: visible;
 
     // hide scrollbar for Chrome
     &::-webkit-scrollbar {
